# gpq

./: .gitignore  README.md  pyproject.toml
gpq/: __init__.py  gpq.py
