[tool.poetry]
name = "gpq"
version = "0.3.0"
description = ""
authors = ["yohan-pg <pg.yohan@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
nvsmi = "^0.4.2"
persistQueue = "^0.1.6"
longprocess = "^0.2.2"
torch = "^1.11.0"
psutil = "^5.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
